[package]
name = "my-pf2e-spell-book"
version = "0.1.0"
edition = "2021"
description = "Template for starting a Yew project using Trunk"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
gloo-console = "0.3.0"
gloo-storage = "0.3.0"
regex = "1.11.1"
serde = "1.0.219"
serde_json = "1.0.140"
wasm-bindgen = "0.2"
web-sys = { version="0.3.77", features=[
    "HtmlSelectElement",
    "HtmlCollection",
    "Element",
    "Node"
]}
yew = { version="0.21", features=["csr"] }
